
wxMSW:

- Fix regression in wxDC drawing with bottom-to-top y axis (Artur Wieczorek).
- Fix compilation with C++Builder XE compiler (Nichka).
- Fix best height of wxSlider with labels but without ticks (Artur Wieczorek).
- Fix initial text value of wxSpinCtrlDouble (Laurent Poujoulat).
- Fix best size calculation for bitmaps with buttons (Artur Wieczorek).
- Fix size of the icon returned from wxFSVolume::GetIcon() (troelsk).
- Fix autosize after expanding/collapsing items in wxDataViewCtrl (ciglesias).
- Fix inserting tools removed from wxToolBar back into it (sbrowne).
- Fix disabling submenu items in the menus (Artur Wieczorek).
- Fix wxEVT_TREE_STATE_IMAGE_CLICK generation (Antal).
- Fix wxDV_ROW_LINES in horizontally scrolled wxDataViewCtrl.
- Fix RegisterHotKey() with negative IDs (troelsk).
- Fix event object type for wxEVT_SPINCTRL events.

wxOSX:

- Compilation fix for wxWebView under 10.10.
- Fix conversion of wxBitmap to wxImage in 64 bit builds.
- Fix wxFileDialog::GetFilterIndex() for file open dialogs (phsilva).
- Fix custom paper support (tijsv).


3.0.2: (released 2014-10-06)
----------------------------

All:

- Fix silent data loss in wx[F]File::Write(wxString) if conversion fails.
- Make wxString::FromCDouble() work when the global C++ locale is not the C one.
- Add support for "%V", "%G" and "%g" to wxDateTime::Format().

All (GUI):

- Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
- Implement bounding box computation in wxGCDC (Toni Ruža).
- Fix saving GIF animations with 2.5s+ delays between frames (elvissteinjr).
- Add "variant" property to windows in XRC.
- Add XRC handler for wxSimplebook.
- Return correct value from wxCommandEvent::GetString() for programmatically
  generated wxEVT_TEXT events from wxComboBox.
- Accept "default" as font family value in XRC (pieleric).
- Send events when toggling wxPropertyGrid nodes from keyboard (Armel Asselin).

wxGTK:

- Fix mouse handling in wxNotebook containing wxListCtrl (Charlie Fenton).